k8s/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vet-stable
  labels:
    app: vet-app
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vet-app
      version: stable
  template:
    metadata:
      labels:
        app: vet-app
        version: stable
    spec:
      containers:
        - name: vet-app
          image: 578673726717.dkr.ecr.us-east-2.amazonaws.com/devops:stable
          ports:
            - containerPort: 3000
