k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vet-stable-service
spec:
  selector:
    app: vet-app
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vet-canary-service
spec:
  selector:
    app: vet-app
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
